// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Card component Matches snapshot 1`] = `
<div>
  <div
    class="css-17zv08w-Card"
  >
    <div
      class="css-13jwrs8-Card"
    >
      card
    </div>
  </div>
</div>
`;

exports[`The Card component Renders the cover image 1`] = `
<div>
  <div
    class="css-17zv08w-Card"
  >
    <div
      class="css-1t1k702-Card"
      role="img"
    />
    <div
      class="css-13jwrs8-Card"
    >
      card
    </div>
  </div>
</div>
`;
